# cpp-mix-5

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: example.cpp
